styles/style.css
/* Style Guide

////////COLOURS\\\\\\\\\

URL: https://coolors.co/f60665-1c3144-00e8fc-ffba08-fff5f5

***CERISE***
Primary headers, branding, buttons
#F60665

***PRUSSIAN BLUE***
Dark background, dark text, Nav bar background, header/footer bar background,
#1C3144

***SNOW***
Light text
#FFF5F5

***SELECTIVE YELLOW***
Card background, containers, secondary headers
#FFBA08

***ELECTRIC BLUE***
hover, highlights, onclick
#00E8FC

///////FONTS\\\\\\\\\

***NAUTILUS***
Branding, Primary headers, button text, text that needs *flair*

***GARAMOND***
Font for anything else not listed above.

***HELVETICA***
Backup font for if above fonts fail to load

*/

/* General Styling */

@font-face {
  font-family: Nautilus;
  src: url(../fonts/Nautilus.otf);
}

@font-face {
  font-family: Garamond;
  src: url("../fonts/EBGaramond-VariableFont_wght.ttf");
}

body {
  background-color: #F5F5F5;
  font-family: Garamond, Helvetica;
  font-weight: bold;
  text-align: center;
}

.d-inline-block {
  width: 150px;
  min-height: auto;
}

.navbar {
  padding: 0;
}

.container-fluid {
  background-color: #1C3144;
}

.hero-header {
  font-family: Nautilus;
  color: #F60665;
}

footer {
  position: fixed;
  bottom: 0;
  width: 100%;
}

.footer>.container {
  padding: 8px;
  margin: 0;
  max-width: 100%;
  background-color: #1C3144;
}


/* login.html Specific Styling */

.login,
.hero-sign-up,
.primary-button {
  background-color: #F60665;
  color: white;
  border-color: transparent;
  font-family: Nautilus;
}

.login:hover,
.hero-sign-up:hover,
.primary-button:hover {
  background-color: #00E8FC;
  color: #1C3144;
  border-color: transparent;
}

/* .login:active,
.hero-sign-up:active {
  background-color: #1C3144;
  color: #FFF5F5;
  border-color: transparent;
} */

.signup-box {
  background-color: #FFBA08;
}

.sit-center {
  text-align: center;
}


/* Main.html Specific Styling */

#event-container {
  background-color: lightgray;
  padding: 2% 3%;
  height: 75vh;
}

legend{ 
  font-family: Nautilus;
  color: #1C3144;
}

.secondary-header {
  color: #FFBA08;
}

.event-text{
  text-align: left;
}

.center {
  text-align: center;
}

